--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,29 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-top: 20px;
+}
+
+ul.pagination li {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+ul.pagination li.active {
+    background-color: var(--color-cyan-800);
+    color: #fff;
+}
